<resources>
    <string name="app_name">Foody</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipes">Favorites</string>
    <string name="food_joke">Joke</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup_chip">Soup Chip</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="finger_food">Finger Food</string>
    <string name="snack">Snack</string>
    <string name="drinks">Drinks</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="apply">Apply</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole_30">Whole 30</string>
    <string name="search">Search</string>

    <string name="healthy">Healthy</string>

    <string name="dairy_free">Dairy Free</string>
    <string name="cheap">Cheap</string>
    <string name="save_to_favorites">Save to favorites</string>
    <string name="no_favorite_recipes">No Favorite Recipes!</string>
    <string name="delete_favourite_menu">Delete Favourite Menu</string>
    <string name="delete_all">Delete All</string>
</resources>